# Outbreak_IC-Model--Parameterization

./: Cargo.toml  Correlation.R  README.md  output.csv
src/: main.rs
